# Exam_bot

./: .gitignore  main.py  pyproject.toml  run.sh
data_answers/: TEMPLATE_2025_kotova_10.json
handlers/: __init__.py  learn.py
keyboards/: __init__.py  builders.py
settings/: __init__.py  config.py  messages.py
states/: form.py
utils/: book_mapings.py  logger.py
