[tool.poetry]
name = "exam-bot"
version = "0.1.0"
description = ""
authors = ["Viktor Klimov <vitya.klimov.2000@gmail.com>"]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.16.0"
pydantic-settings = "^2.7.1"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
numpy = "^2.2.2"
pandas = "^2.2.3"
opencv-python = "^4.11.0.86"
pdfplumber = "^0.11.5"
pytesseract = "^0.3.13"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
